--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-player": "^2.11.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "typewriter-effect": "^2.19.0",
