--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"react": "^18.2.0",
+		"react-audio-player": "^0.17.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.7.1",
 		"react-player": "^2.11.0",
