--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-player": "^2.11.0",
 		"react-router-dom": "^6.6.2",
 		"react-scripts": "5.0.1",
+		"react-tooltip": "^5.7.4",
 		"typewriter-effect": "^2.19.0",
 		"use-sound": "^4.0.1",
 		"uuid": "^9.0.0",
